--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   provider: ^6.1.2
   auto_size_text: ^3.0.0
   shared_preferences: ^2.0.6
   fl_chart: ^0.70.2
+  url_launcher: ^6.1.10
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -91,3 +92,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/icon.png"
+  min_sdk_android: 16 # android min sdk min:16, default 21
